# Quantum-Coders-26E3098

./: .env  .env.example  .gitignore  Makefile  README  README.md  docker-compose.prod.yml  docker-compose.yml  error_log.txt  import_error_log.txt  import_out.txt  llm_gateway.db  pyproject.toml  requirements.txt  test_imports.py  uvicorn_output.txt
backend/: config.py  main.py  requirement.txt
backend/api/: router.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: admin.py  chat.py  health.py  models.py  monitoring.py  routing.py
backend/app/: lifespan.py  main.py  version.py
backend/app/api/: deps.py  middleware.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  security.py
backend/app/models/: registry.py
backend/app/services/: chat_service.py  groq_client.py  huggingface_client.py  routing_service.py
backend/cache/: cache_manager.py  redis_cache.py  semantic_cache.py
backend/core/: circuit_breaker.py  exceptions.py  logging.py  rate_limiter.py  security.py
backend/database/repositories/: chat_repository.py  metrics_repository.py  model_repository.py
backend/gateway/: gateway_handler.py  request_validator.py  response_handler.py
backend/router/: prompt_analyzer.py  prompt_router.py  routing_strategies.py
backend/schemas/: chat.py  models.py  routing.py
backend/services/: cache_service.py  chat_service.py  model_service.py  routing_service.py
backend/utils/: cost_calculator.py  token_counter.py  validators.py
config/: routing_rules.yaml
frontend/: app.js  index.html  style.css
(+6 files in other folders)
