[tool.poetry]
name = "llm-inference-platform"
version = "0.1.0"
description = "Enterprise-grade LLM inference gateway"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
redis = "^5.0.0"
httpx = "^0.27.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
prometheus-client = "^0.20.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"